<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="com.afflyas.vknotes.repository.Status"/>

        <variable
            name="listIsEmpty"
            type="boolean" />

        <variable
            name="networkState"
            type="com.afflyas.vknotes.repository.NetworkState" />

        <variable
            name="callback"
            type="com.afflyas.vknotes.ui.common.RetryCallback" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <ProgressBar
            android:padding="@dimen/activity_horizontal_margin"
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:visibleGone="@{networkState.status == Status.RUNNING}"/>

        <TextView
            android:id="@+id/emptyResultTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/no_matches"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"
            app:visibleGone="@{networkState.status == Status.SUCCESS &amp;&amp; listIsEmpty}" />

        <TextView
            android:id="@+id/errorMessageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@{networkState.msg}"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="18sp"
            app:visibleGone="@{networkState.status == Status.FAILED}"
            tools:text="@string/error_edit" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="@{() -> callback.retry()}"
            android:text="@string/retry"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:visibleGone="@{networkState.status == Status.FAILED}" />


        <com.afflyas.afflyasnavigation.ANSpaceBottom
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:withANBottomNavigation="true"/>

    </LinearLayout>

</layout>