<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.settings.SettingsFragment">

    <data>

        <import type="com.afflyas.vknotes.BuildConfig"/>
        <import type="com.afflyas.vknotes.repository.Status"/>

        <variable
            name="user"
            type="com.afflyas.vknotes.vo.VKUser"/>

        <variable
            name="networkState"
            type="com.afflyas.vknotes.repository.NetworkState" />

    </data>

    <com.afflyas.afflyasnavigation.ANSwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:refreshing="@{networkState.status == Status.RUNNING}">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin">

                <com.afflyas.afflyasnavigation.ANSpaceTop
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:topBarHeightMode="default_action_bar" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardUseCompatPadding="true"
                    app:cardBackgroundColor="?attr/backgroundCardColor"
                    android:layout_marginTop="@dimen/activity_vertical_margin">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/profileTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/profile"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/avatarImage"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginRight="8dp"
                            android:background="@android:color/darker_gray"
                            android:contentDescription="@string/photo"
                            app:imageFromUrl="@{user.photo}"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/profileTitle" />

                        <TextView
                            android:id="@+id/name"
                            android:layout_width="0dp"
                            android:gravity="center_horizontal"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginRight="8dp"
                            android:text="@{user.getFullName()}"
                            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/avatarImage"
                            tools:text="Firstname Lastname" />

                        <Button
                            android:id="@+id/logoutButton"
                            style="@style/Widget.AppCompat.Button.Borderless.Colored"
                            android:textColor="?attr/colorAccent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/logout"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/name" />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="?attr/backgroundCardColor"
                    app:cardUseCompatPadding="true">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/uiTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/ui"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Switch
                            android:id="@+id/themeSwitch"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginRight="16dp"
                            android:background="@drawable/bottom_line"
                            android:text="@string/dark_theme"
                            android:textColor="?android:textColor"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/uiTitle" />

                        <Switch
                            android:id="@+id/scrollSwitch"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginRight="16dp"
                            android:text="@string/scroll_hide"
                            android:textColor="?android:textColor"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/themeSwitch" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardUseCompatPadding="true"
                    app:cardBackgroundColor="?attr/backgroundCardColor"
                    android:layout_marginBottom="@dimen/activity_vertical_margin">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/aboutTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/about"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/appLogo"
                            android:layout_width="125dp"
                            android:layout_height="125dp"
                            android:layout_marginStart="24dp"
                            android:layout_marginLeft="24dp"
                            android:layout_marginTop="16dp"
                            android:contentDescription="@string/app_name"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/aboutTitle"
                            app:srcCompat="@drawable/ic_logo" />

                        <TextView
                            android:id="@+id/appName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/app_name"
                            android:textSize="18sp"
                            app:layout_constraintEnd_toEndOf="@+id/appLogo"
                            app:layout_constraintStart_toStartOf="@+id/appLogo"
                            app:layout_constraintTop_toBottomOf="@+id/appLogo" />

                        <TextView
                            android:id="@+id/appVersion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="16dp"
                            android:text="@{BuildConfig.VERSION_NAME}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/appName"
                            app:layout_constraintStart_toStartOf="@+id/appName"
                            app:layout_constraintTop_toBottomOf="@id/appName" />

                        <androidx.constraintlayout.widget.Guideline
                            android:id="@+id/guideline"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintGuide_percent="0.5" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/review"
                            style="@style/Base.Widget.AppCompat.Button"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/review"
                            android:textAllCaps="false"
                            app:backgroundTint="?attr/backgroundCardColor"
                            app:layout_constraintBottom_toTopOf="@+id/memoryLeak"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/guideline"
                            app:strokeColor="?attr/tintSecondary"
                            app:strokeWidth="1dp" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/memoryLeak"
                            style="@style/Base.Widget.AppCompat.Button"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/memory_leak"
                            android:textAllCaps="false"
                            app:backgroundTint="?attr/backgroundCardColor"
                            app:layout_constraintBottom_toBottomOf="@+id/appLogo"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/guideline"

                            app:strokeColor="?attr/tintSecondary"
                            app:strokeWidth="1dp" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <com.afflyas.afflyasnavigation.ANSpaceBottom
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:withANBottomNavigation="true"/>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </com.afflyas.afflyasnavigation.ANSwipeRefreshLayout>

</layout>